propertee-core/src/test/resources/tests/89_error_loop_condition_not_boolean.expected
3
Runtime error: Runtime Error at line 8:5: Condition requires a boolean value. Got string
